--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,44 +1,40 @@
-name: Windows Quick Build
+name: macOS Build
 
 on:
-  pull_request:
+  push:
     branches: [ "main" ]
 
 jobs:
   build:
-    runs-on: windows-latest
-
+    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
-        build_type: [ "release" ]
-        platform: [ "x64" ]
+        cxx-standard: [ 98, 11, 14, 17, 20, 23 ]
+        use_float: [ "OFF", "ON" ]
 
     steps:
       - uses: actions/checkout@v4
-
-      - uses: ilammy/msvc-dev-cmd@v1
 
       - name: Restore cmake dependencies
         id: cache-restore-cmake-deps
         uses: actions/cache/restore@v4
         with:
-          path: |
-            build/_deps
+          path: build/_deps
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
-        shell: cmd
+        env:
+          CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          nmake configure BUILD=${{ matrix.build_type }}
-          nmake build
-          nmake test
+          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
+          make build
+          make test
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
         id: cache-save-cmake-deps
         uses: actions/cache/save@v4
         with:
-          path: |
-            build/_deps
+          path: build/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
