--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,8 +17,8 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     env:
-      CXX: clang++-18
-      GCOV: llvm-cov-18 gcov
+      CXX: "clang++-18"
+      GCOV: "llvm-cov-18 gcov"
     steps:
       - uses: actions/checkout@v4
 
