--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Build fuzzylite
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
-          MAKE: ${{ matrix.os == 'windows-latest' && 'nmake' || 'make' }}
+          MAKE_CMD: ${{ matrix.os == 'windows-latest' && 'nmake' || 'make' }}
         run: |
-          ${MAKE} configure STRICT=ON TESTS=ON 
-          ${MAKE} build
-          ${MAKE} test
+          ${MAKE_CMD} configure STRICT=ON TESTS=ON 
+          ${MAKE_CMD} build
+          ${MAKE_CMD} test
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
