--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,13 +26,14 @@ jobs:
           key: ${{ runner.os }}-cmake-deps
 
       - name: Build fuzzylite
+        shell: cmd
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
-          MAKE_CMD: ${{ matrix.os == 'windows-latest' && 'nmake' || 'make' }}
+          MAKE: ${{ matrix.os == 'windows-latest' && 'nmake' || 'make' }}
         run: |
-          ${MAKE_CMD} configure STRICT=ON TESTS=ON 
-          ${MAKE_CMD} build
-          ${MAKE_CMD} test
+          ${MAKE} configure STRICT=ON TESTS=ON 
+          ${MAKE} build
+          ${MAKE} test
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
