--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,15 +25,24 @@ jobs:
           path: build/_deps
           key: ${{ runner.os }}-cmake-deps
 
-      - name: Build fuzzylite
+      - name: Build fuzzylite on Unix
+        if: ${{ matrix.os != 'windows-latest'}}
+        env:
+          CXX_STANDARD: ${{ matrix.cxx-standard }}
+        run: |
+          make configure STRICT=ON TESTS=ON 
+          make build
+          make test
+
+      - name: Build fuzzylite on Windows
+        if: ${{ matrix.os == 'windows-latest'}}
         shell: cmd
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
-          MAKE: ${{ matrix.os == 'windows-latest' && 'nmake' || 'make' }}
         run: |
-          ${MAKE} configure STRICT=ON TESTS=ON 
-          ${MAKE} build
-          ${MAKE} test
+          nmake configure STRICT=ON TESTS=ON 
+          nmake build
+          nmake test
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
