--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -2,11 +2,11 @@ name: Linux Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "build/*", "build-linux/*" ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
