--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -2,7 +2,9 @@ name: Windows Build
 
 on:
   push:
-    branches: [ "main", "build/*", "build-windows/*" ]
+    branches: [ main ]
+  pull-request:
+    branches: [ build/*, build-windows/* ]
 
 jobs:
   build:
@@ -11,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         cxx-standard: [ 98, 11, 14, 17, 20, 23 ]
-        use_float: [ "OFF", "ON" ]
+        use_float: [ OFF, ON ]
 
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +32,7 @@ jobs:
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          nmake configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }} 
+          nmake configure STRICT=OFF TESTS=ON FLOAT=${{ matrix.use_float }} 
           nmake build
           nmake test
 
