--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -3,7 +3,7 @@ name: Linux Build
 on:
   push:
     branches: [ main ]
-  pull-request:
+  pull_request:
     branches: [ "build/*", "build-linux/*" ]
 
 jobs:
