--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -3,7 +3,7 @@ name: macOS Build
 on:
   push:
     branches: [ main ]
-  pull-request:
+  pull_request:
     branches: [ "build/*", "build-macos/*" ]
 
 jobs:
