--- a/.github/workflows/monthly-linux.yml
+++ b/.github/workflows/monthly-linux.yml
@@ -1,17 +1,20 @@
-name: macOS Quick Build
+name: Linux Build (monthly)
 
 on:
+  schedule: # monthly, first day
+    - cron: 0 0 1 * *
   pull_request:
-    branches: [ "main" ]
+    branches: [ build/*, build-linux/* ]
 
 jobs:
   build:
-    runs-on: macos-latest
-
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
-        build_type: [ "release" ]
+        cxx: [ clang++-18, g++-14 ]
+        cxx-standard: [ 98, 11, 14, 17, 20, 23 ]
+        use_float: [ OFF, ON ]
 
     steps:
       - uses: actions/checkout@v4
@@ -20,13 +23,15 @@ jobs:
         id: cache-restore-cmake-deps
         uses: actions/cache/restore@v4
         with:
-          path: |
-            build/_deps
+          path: build/_deps
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
+        env:
+          CXX: ${{ matrix.cxx }}
+          CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          make configure BUILD=${{ matrix.build_type }}
+          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
           make build
           make test
 
@@ -35,6 +40,5 @@ jobs:
         id: cache-save-cmake-deps
         uses: actions/cache/save@v4
         with:
-          path: |
-            build/_deps
+          path: build/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
