--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,8 +9,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cxx-standard: [ 11 ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
+        cxx-standard: [ 11 ]
+        float: [ OFF, ON ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +31,7 @@ jobs:
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          make configure STRICT=ON TESTS=ON 
+          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.float }}
           make build
           make test
 
@@ -40,7 +41,7 @@ jobs:
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          nmake configure STRICT=OFF TESTS=ON 
+          nmake configure STRICT=OFF TESTS=ON FLOAT=${{ matrix.float }}
           nmake build
           nmake test
 
