--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -34,5 +34,10 @@ jobs:
         with:
           file: build/coveralls.json
 
-      - name: Documentation
+  documentation:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Doxygen
         uses: mattnotmitt/doxygen-action@v1.1.0
