--- a/.github/workflows/monthly-macos.yml
+++ b/.github/workflows/monthly-macos.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         cxx-standard: [ 98, 11, 14, 17, 20, 23 ]
         use_float: [ OFF, ON ]
+        generator: [ "Unix Makefiles", "Xcode" ]
 
     steps:
       - uses: actions/checkout@v4
@@ -28,6 +29,7 @@ jobs:
       - name: Building FuzzyLite
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
+          CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
           make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
           make build
