--- a/.github/workflows/monthly-windows.yml
+++ b/.github/workflows/monthly-windows.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         cxx-standard: [ 98, 11, 23 ]
         use_float: [ OFF, ON ]
-        platform: [ x64, win32 ]
+        generator: ["NMake Makefiles", "Visual Studio 17 2022"]
 
     steps:
       - uses: actions/checkout@v4
