cmake: add_compiler_options (#167)
* cmake: add_compiler_options instead of manually setting flags. Remove -fPIC because it is automatically added for shared libraries.

* Simplify branch and add -fPIC to objectTarget so it applies to static

* print cmake generator

* remove ctest targets

* macOS Xcode and Makefiles

* Windows: NMake and VS

* remove warning windows

* Fix: Xcode similar to MSVC

* fix: Windows warnings

* windows: generators and cache

* mac: generators and cache

--- a/.github/workflows/monthly-macos.yml
+++ b/.github/workflows/monthly-macos.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         cxx-standard: [ 98, 11, 14, 17, 20, 23 ]
         use_float: [ OFF, ON ]
+        generator: [ "Unix Makefiles", "Xcode" ]
 
     steps:
       - uses: actions/checkout@v4
@@ -23,11 +24,12 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: build/_deps
-          key: ${{ runner.os }}-cmake-deps
+          key: ${{ runner.os }}-${{ matrix.generator }}-cmake-deps
 
       - name: Building FuzzyLite
         env:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
+          CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
           make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
           make build
