Windows: strict and Cmake min version 3.15

--- a/.github/workflows/main-windows.yml
+++ b/.github/workflows/main-windows.yml
@@ -32,7 +32,7 @@ jobs:
           CXX_STANDARD: ${{ matrix.cxx-standard }}
           CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
-          nmake configure STRICT=OFF TESTS=ON FLOAT=${{ matrix.use_float }} 
+          nmake configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }} 
           nmake build
           nmake test
 
