--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "7"
 dependencies = [
     # source code formatting
     "clang-format==19.1.1",
+    # cmake linter
+    "cmakelint==1.4.3",
     # code coverage interpretation
     "gcovr==8.2",
     # markdown linter
